@@ -1,4 +1,5 @@
 version 0.2.5 - currently working on (intermediate release)
+- Removed the outdated configuration files in the EM (#224)
 - Fixed missing CSS file selector in flexform (#215)
 - Fixed a problem with multiple inclusion of the CSS file (#214)
 - Fixed a misplaced marker in the template (#216)
